# PygletEngine

./: README.md  pyproject.toml
pygletengine/core/: __init__.py  types.py
pygletengine/tests/: test_core.py
src/pygletengine/: rendering.py
src/pygletengine/core/: __init__.py  logging.py  types.py
tests/: test_core.py
