[tool.poetry]
name = "pygletengine"
version = "0.1.0"
description = ""
authors = ["numbergazing <manoahbernier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "^1.5.26"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
